# Genomic_Benchmark

./: .gitignore  README.md  pyproject.toml
demo_data/: Gasperini_filtered.tsv  Gasperini_info.md  Gasperini_processed.tsv
docs/data/: download.md  enhancer_processor_guide.md  eqtl_processor_guide.md
genomic_benchmark/: __init__.py
genomic_benchmark/data/: __init__.py  base_processor.py  data.py  download.py  enhancer_processor.py  eqtl_processor.py
genomic_benchmark/data/data_config/: config_manager.py  enhancer_config.py  eqtl_config.py
src/data/: enhancer_processor.py  eqtl_processor.py
src/data/data_config/: __init__.py  genome_config.py
tests/: test_download.py
tests/enhancer/: test_enhancer_processor.py  test_eqtl_processor.py
