[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomic_benchmark"
version = "0.1.0"
description = "Benchmark for DNA sequence-based model"
requires-python = ">=3.7"

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=0.24.0",
    "requests>=2.26.0",
    "tqdm>=4.62.0",
    "fastparquet",
    "pysam",
]

[tool.hatch.build.targets.wheel]
packages = ["genomic_benchmark"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
] 